--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
-    "nodemon": "^1.10.2"
+    "chai": "^3.5.0",
+    "mocha": "^3.1.0",
+    "nodemon": "^1.10.2",
+    "phantomjs": "^2.1.7"
   }
 }
