--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "mocha --compilers js:babel-core/register --require ./test/.setup.js"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -16,10 +17,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.16.0",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "chai": "^3.5.0",
+    "jsdom": "^9.5.0",
     "mocha": "^3.1.0",
     "nodemon": "^1.10.2",
     "phantomjs": "^2.1.7"
