--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "jsdom": "^9.5.0",
     "mocha": "^3.1.0",
     "nodemon": "^1.10.2",
-    "phantomjs": "^2.1.7"
+    "phantomjs": "^2.1.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
