--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "mocha --compilers js:babel-core/register --require ./test/.setup.js"
+    "test": "mocha --compilers js:babel-core/register --require ./test/.setup.js",
+    "start": "MONGO_URL=mongodb://localhost/note NOTES_MODEL=models/notes-mongodb nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -13,6 +13,7 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "jquery": "^3.1.1",
+    "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
