--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
   "name": "functional-demo",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "url": "git@github.com:Dkra/functional-demo.git",
+    "type": "git"
+  },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/.setup.js",
     "start": "MONGO_URL=mongodb://localhost/note NOTES_MODEL=models/notes-mongodb nodemon ./bin/www"
   },
+  "author": "roger.jiang <dkra4741@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "~2.4.1",
-    "express": "~4.13.4",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "github-api": "^2.3.0",
     "jquery": "^3.1.1",
-    "mongodb": "^2.2.10",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "mongodb": "^2.2.11",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
-    "jsdom": "^9.5.0",
-    "mocha": "^3.1.0",
-    "nodemon": "^1.10.2",
-    "phantomjs": "^2.1.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2"
+    "jsdom": "^9.8.3",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "phantomjs": "^2.1.7+deprecated",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1"
   }
 }
